--- a/YellowstonePathology/UserInterface.csproj
+++ b/YellowstonePathology/UserInterface.csproj
@@ -40,7 +40,7 @@
     <MapFileExtensions>false</MapFileExtensions>
     <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
     <WebPage>publish.htm</WebPage>
-    <ApplicationRevision>29</ApplicationRevision>
+    <ApplicationRevision>45</ApplicationRevision>
     <ApplicationVersion>10.1.6.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -1042,7 +1042,11 @@
     <Compile Include="Business\Monitor.Model\PendingTest.cs" />
     <Compile Include="Business\Monitor.Model\PendingTestCollection.cs" />
     <Compile Include="Business\ParseSpecimenOrderIdResult.cs" />
+    <Compile Include="Business\Surgical\ProcessorRunDefinitions.cs" />
     <Compile Include="Business\Test\AMLPrognosticProfile\AMLPrognosticProfileTest.cs" />
+    <Compile Include="Business\Test\GrossOnly\GrossOnlyTest.cs" />
+    <Compile Include="Business\Test\GrossOnly\GrossOnlyTestOrder.cs" />
+    <Compile Include="Business\Test\GrossOnly\GrossOnlyWordDocument.cs" />
     <Compile Include="Business\Test\JAK2V617F\JAK2V617FWPHObxView.cs" />
     <Compile Include="Business\Test\MUM1ByIHC\MUM1ByIHCTest.cs" />
     <Compile Include="Business\Test\PlateletAssociatedAntibodies\PlateletAssociatedAntibodiesEPICOBXView.cs" />
@@ -3058,6 +3062,8 @@
     <Compile Include="UI\EmbeddingDialog.xaml.cs">
       <DependentUpon>EmbeddingDialog.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UI\EmbeddingNotScannedList.cs" />
+    <Compile Include="UI\EmbeddingNotScannedListItem.cs" />
     <Compile Include="UI\FaxTesting.cs" />
     <Compile Include="UI\Gross\BlankPage.xaml.cs">
       <DependentUpon>BlankPage.xaml</DependentUpon>
@@ -3164,6 +3170,9 @@
     <Compile Include="UI\MakeDictionary.cs" />
     <Compile Include="UI\MaterialTracking\MaterialTrackingCasePage.xaml.cs">
       <DependentUpon>MaterialTrackingCasePage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UI\MaterialTracking\FedXTrackingPage.xaml.cs">
+      <DependentUpon>FedXTrackingPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="UI\Mongo\ClassHelper.cs" />
     <Compile Include="UI\Mongo\MongoMigrationWindow.xaml.cs">
@@ -3497,6 +3506,9 @@
       <DependentUpon>FGFR1ResultPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="UI\Test\FGFR1ResultPath.cs" />
+    <Compile Include="UI\Test\GrossOnlyResultPage.xaml.cs">
+      <DependentUpon>GrossOnlyResultPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UI\Test\HoldForFlowResultPage.xaml.cs">
       <DependentUpon>HoldForFlowResultPage.xaml</DependentUpon>
     </Compile>
@@ -3721,6 +3733,7 @@
       <DependentUpon>TechInitiatedPeripheralSmearResultPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="UI\Test\TechInitiatedPeripheralSmearResultPath.cs" />
+    <Compile Include="UI\Test\GrossOnlyResultPath.cs" />
     <Compile Include="UI\Test\TechnicalOnlyResultPath.cs" />
     <Compile Include="UI\Test\WomensHealthProfilePage.xaml.cs">
       <DependentUpon>WomensHealthProfilePage.xaml</DependentUpon>
@@ -5030,6 +5043,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="UI\MaterialTracking\FedXTrackingPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="UI\Mongo\MongoMigrationWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -5347,6 +5364,10 @@
     <Page Include="UI\Test\FGFR1ResultPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UI\Test\GrossOnlyResultPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="UI\Test\HoldForFlowResultPage.xaml">
       <SubType>Designer</SubType>
