--- a/YellowstonePathology/UserInterface.csproj
+++ b/YellowstonePathology/UserInterface.csproj
@@ -1103,6 +1103,12 @@
     <Compile Include="Business\XPSDocument\Result\ClientBillingDetailReportResult\ClientBillingDetailReportData.cs" />
     <Compile Include="Business\XPSDocument\Result\ClientBillingDetailReportResult\ClientBillingDetailReportDataAccessionOrder.cs" />
     <Compile Include="Business\XPSDocument\Result\ClientBillingDetailReportResult\ClientBillingDetailReportDataReport.cs" />
+    <Compile Include="Business\XPSDocument\Result\Data\AccessionOrderDataSheetDataAccessionOrder.cs" />
+    <Compile Include="Business\XPSDocument\Result\Data\AccessionOrderDataSheetDataClientOrder.cs" />
+    <Compile Include="Business\XPSDocument\Result\Data\AccessionOrderDataSheetDataCommentLog.cs" />
+    <Compile Include="Business\XPSDocument\Result\Data\AccessionOrderDataSheetDataSpecimenOrder.cs" />
+    <Compile Include="Business\XPSDocument\Result\Data\AccessionOrderDataSheetDataV2.cs" />
+    <Compile Include="Business\XPSDocument\Result\Xps\AccessionOrderDataSheetV2.cs" />
     <Compile Include="Business\XPSDocument\Result\Xps\ClientSupplyOrderReportV2.cs" />
     <Compile Include="MySQLMigration\MigrationStatus.cs" />
     <Compile Include="MySQLMigration\MigrationStatusCollection.cs" />
