--- a/YellowstonePathology/UserInterface.csproj
+++ b/YellowstonePathology/UserInterface.csproj
@@ -43,7 +43,7 @@
     <MapFileExtensions>false</MapFileExtensions>
     <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
     <WebPage>publish.htm</WebPage>
-    <ApplicationRevision>163</ApplicationRevision>
+    <ApplicationRevision>180</ApplicationRevision>
     <ApplicationVersion>10.1.6.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -736,6 +736,7 @@
     <Compile Include="Business\Facility.Model\LocationCollection.cs" />
     <Compile Include="Business\Facility.Model\LocationDefinitions.cs" />
     <Compile Include="Business\Facility.Model\LoweLawGroup.cs" />
+    <Compile Include="Business\Facility.Model\SheridanPathologyAssociates.cs" />
     <Compile Include="Business\Facility.Model\MayoClinic.cs" />
     <Compile Include="Business\Facility.Model\MDAndersonCancerCenter.cs" />
     <Compile Include="Business\Facility.Model\MLabs.cs" />
