--- a/YellowstonePathology/UserInterface.csproj
+++ b/YellowstonePathology/UserInterface.csproj
@@ -2514,11 +2514,11 @@
     <Compile Include="Business\Test\PantherOrderListItemNGCT.cs" />
     <Compile Include="Business\Test\PathologistTestOrderItemList.cs" />
     <Compile Include="Business\Test\PathologistTestOrderListItem.cs" />
-    <Compile Include="Business\Test\PDL1\PDL1EpicObxView.cs" />
-    <Compile Include="Business\Test\PDL1\PDL1SystemGeneratedAmendmentText.cs" />
-    <Compile Include="Business\Test\PDL1\PDL1Test.cs" />
-    <Compile Include="Business\Test\PDL1\PDL1TestOrder.cs" />
-    <Compile Include="Business\Test\PDL1\PDL1WordDocument.cs" />
+    <Compile Include="Business\Test\PDL1SP142\PDL1SP142EpicObxView.cs" />
+    <Compile Include="Business\Test\PDL1SP142\PDL1SP142SystemGeneratedAmendmentText.cs" />
+    <Compile Include="Business\Test\PDL1SP142\PDL1SP142Test.cs" />
+    <Compile Include="Business\Test\PDL1SP142\PDL1SP142TestOrder.cs" />
+    <Compile Include="Business\Test\PDL1SP142\PDL1SP142WordDocument.cs" />
     <Compile Include="Business\Test\PeerReview\PeerReviewTest.cs" />
     <Compile Include="Business\Test\PeerReview\PeerReviewTestOrder.cs" />
     <Compile Include="Business\Test\PeerReview\PeerReviewTypeCollection.cs" />
@@ -3606,10 +3606,10 @@
       <DependentUpon>MissingInformationResultPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="UI\Test\MissingInformationResultPath.cs" />
-    <Compile Include="UI\Test\PDL1ResultPage.xaml.cs">
-      <DependentUpon>PDL1ResultPage.xaml</DependentUpon>
+    <Compile Include="UI\Test\PDL1SP142ResultPage.xaml.cs">
+      <DependentUpon>PDL1SP142ResultPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="UI\Test\PDL1ResultPath.cs" />
+    <Compile Include="UI\Test\PDL1SP142ResultPath.cs" />
     <Compile Include="UI\Test\RASRAFPanelResultPage.xaml.cs">
       <DependentUpon>RASRAFPanelResultPage.xaml</DependentUpon>
     </Compile>
@@ -5489,7 +5489,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="UI\Test\PDL1ResultPage.xaml">
+    <Page Include="UI\Test\PDL1SP142ResultPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
